foo-application/external-foo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: my-foo-svc
spec:
  type: ExternalName

  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: google.com
