foo-application/foo-lb.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: foo
  namespace: namesapce-a
spec:
  containers:
  - name: foo
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
    ports:
    - containerPort: 5678 
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: namesapce-a
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  - port: 5678
    targetPort: 8080
