foo-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-ingress
spec:
  rules:
  - http:
    paths:
    - path: /foo
      pathType: Prefix
      backend:
        service:
          name: foo-service
          port:
            number: 8080
